Bug 1800389 Color contrast issues for navigation arrow bar
Fixed color contrast issues

behatnotneeded

(cherry picked from commit fc770e300ba07af0619868edc65ff56bb2b3be5a)

--- a/htdocs/theme/modern/sass/layout/panel/_panel-heading.scss
+++ b/htdocs/theme/modern/sass/layout/panel/_panel-heading.scss
@@ -5,7 +5,7 @@
         color: #FFF;
 
         .text-midtone {
-          color: desaturate(lighten($accent-color, 30), 10);
+          color: #FFF;
         }
     }
 }
