--- a/htdocs/theme/ocean/sass/components/_arrow-bar.scss
+++ b/htdocs/theme/ocean/sass/components/_arrow-bar.scss
@@ -1,4 +1,6 @@
 .arrow-bar {
+    background-color: #0a4f66;
+
     // to theme the Résumé nav blue
     &.resume {
         .nav-inpage {
